# poi-app-demo

./: README.txt
binding/autobuild/linux/: autobuild
binding/conf.d/cmake/: config.cmake
binding/conf.d/wgt/: config.xml.in
binding/src/: CMakeLists.txt  binding-api.c  binding-api.h  verbs.cpp
libqtappfw/: CMakeLists.txt  message.h  messageengine.cpp
libqtappfw/poi/: CMakeLists.txt  poi.cpp  poi.h  poimessage.cpp  poimessage.h
poi-service/: CMakeLists.txt
poi-service/autobuild/linux/: autobuild
poi-service/conf.d/cmake/: config.cmake
poi-service/conf.d/wgt/: config.xml.in
poi-service/src/: CMakeLists.txt  main.cpp  poiservice.cpp  poiservice.h  webclient.cpp  webclient.h
poi-yelp/: .gitreview  .vimrc  CMakeLists.txt  InfoPanel.cpp  InfoPanel.h  InfoPanelLabel.cpp  LICENSE  MainApp.cpp  MainApp.h  config.xml.in  main.cpp
poi-yelp/autobuild/agl/: autobuild
